--- a/projects/landing/src/index.html
+++ b/projects/landing/src/index.html
@@ -1,13 +1,148 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Landing</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>MTDA - Software Engineer from Brazil working remote for companies in Europe, Canada and US</title>
+
+    <meta
+        property="og:title"
+        content="MTDA - Software Engineer from Brazil working remote for companies in Europe, Canada and US"
+    >
+    <meta
+        name="description"
+        content="Full Stack Developer and UI/UX lover with 15+ years experience as a Web and Mobile Developer"
+    >
+    <meta
+        property="og:description"
+        content="Full Stack Developer and UI/UX lover with 15+ years experience as a Web and Mobile Developer"
+    >
+    <meta
+        property="og:image"
+        content="https://mtda.me/assets/images/og-image.png"
+    >
+    <meta
+        property="og:type"
+        content="website"
+    >
+    <meta
+        property="og:locale"
+        content="en_US"
+    >
+
+    <base href="/">
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1"
+    >
+    <meta
+        name="theme-color"
+        content="#6D28D9"
+    />
+
+    <!-- FAVICON -->
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="57x57"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-57x57.png"
+    />
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="114x114"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-114x114.png"
+    />
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="72x72"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-72x72.png"
+    />
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="144x144"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-144x144.png"
+    />
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="60x60"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-60x60.png"
+    />
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="120x120"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-120x120.png"
+    />
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="76x76"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-76x76.png"
+    />
+    <link
+        rel="apple-touch-icon-precomposed"
+        sizes="152x152"
+        href="https://mtda.me/assets/images/favicon/apple-touch-icon-152x152.png"
+    />
+    <link
+        rel="icon"
+        type="image/png"
+        href="https://mtda.me/assets/images/favicon/favicon-196x196.png"
+        sizes="196x196"
+    />
+    <link
+        rel="icon"
+        type="image/png"
+        href="https://mtda.me/assets/images/favicon/favicon-96x96.png"
+        sizes="96x96"
+    />
+    <link
+        rel="icon"
+        type="image/png"
+        href="https://mtda.me/assets/images/favicon/favicon-32x32.png"
+        sizes="32x32"
+    />
+    <link
+        rel="icon"
+        type="image/png"
+        href="https://mtda.me/assets/images/favicon/favicon-16x16.png"
+        sizes="16x16"
+    />
+    <link
+        rel="icon"
+        type="image/png"
+        href="https://mtda.me/assets/images/favicon/favicon-128.png"
+        sizes="128x128"
+    />
+    <meta
+        name="application-name"
+        content="MTDA - Sites, E-commerce e Aplicativos"
+    />
+    <meta
+        name="msapplication-TileColor"
+        content="#FAFAFA"
+    />
+    <meta
+        name="msapplication-TileImage"
+        content="https://mtda.me/assets/images/favicon/mstile-144x144.png"
+    />
+    <meta
+        name="msapplication-square70x70logo"
+        content="https://mtda.me/assets/images/favicon/mstile-70x70.png"
+    />
+    <meta
+        name="msapplication-square150x150logo"
+        content="https://mtda.me/assets/images/favicon/mstile-150x150.png"
+    />
+    <meta
+        name="msapplication-wide310x150logo"
+        content="https://mtda.me/assets/images/favicon/mstile-310x150.png"
+    />
+    <meta
+        name="msapplication-square310x310logo"
+        content="https://mtda.me/assets/images/favicon/mstile-310x310.png"
+    />
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
+
 </html>
