refactor(): title and theme-color

--- a/projects/landing/src/index.html
+++ b/projects/landing/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MTDA - Software Engineer from Brazil working remote for companies in Europe, Canada and US</title>
+    <title>Software Engineer from Brazil working remote for companies in Europe, Canada and US</title>
 
     <meta
         property="og:title"
-        content="MTDA - Software Engineer from Brazil working remote for companies in Europe, Canada and US"
+        content="Software Engineer from Brazil working remote for companies in Europe, Canada and US"
     >
     <meta
         name="description"
@@ -37,7 +37,7 @@
     >
     <meta
         name="theme-color"
-        content="#6D28D9"
+        content="#4C1D95"
     />
 
     <!-- FAVICON -->
